Fix Chrome issue with unwanted horizontal scrollbar (#1488851)

--- a/skins/larry/styles.css
+++ b/skins/larry/styles.css
@@ -510,6 +510,10 @@ a.iconlink.upload {
 
 /*** basic page layout ***/
 
+#header {
+	overflow: hidden; /* Chrome bug #1488851 */
+}
+
 #topline {
 	height: 18px;
 	background: url(images/linen_header.jpg) repeat #666;
